# xk6-milvus

./: .gitignore  .golangci.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  go.mod  go.sum  index.d.ts  milvus.go  register.go
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  python-package.yml  release.yml  test.yml
api-docs/: README.md
deployment/: docker-compose.yml
docs/: API.md  CUSTOM_METRICS.md  GOLANG_GUIDE_CN.md
docs/golang-tutorial/: 01-environment-setup.md  02-packages-and-modules.md  03-basic-types.md  04-composite-types.md  05-functions-and-methods.md  06-interfaces.md  07-error-handling.md  08-json-and-conversion.md  09-k6-extension-pattern.md  10-hands-on-exercises.md  README.md
example/: collection-bound-test.js  flexible-test.js  hybrid-search-test.js  new-api-test.js  test-milvus.js
examples/: README.md  basic-operations.js  check-failures.js  collection-management.js  full-text-search.js  hybrid-search.js  metrics-demo.js  recall-validation.js  rest-basic-operations.js  rest-hybrid-search.js  rest-vector-search.js  rest-vs-grpc.js  snapshot-operations.js  test-hybrid-debug.js  test-vector-gen.js  vector-search.js  workload-checker.js
examples/advanced/: complete-metrics-example.js  metrics-example.js  (+1 more)
lib/: milvus-rest.d.ts  milvus-rest.js
scripts/: test-all.sh  test-examples.sh  test-integration.sh
xk6-milvus-bench/: README.md  hatch_build.py  pyproject.toml
xk6-milvus-bench/configs/: default.yaml  soak.yaml  stress.yaml
xk6-milvus-bench/configs/scenarios/: benchmark.yaml  insert.yaml  mixed.yaml  search.yaml  struct-array.yaml
xk6-milvus-bench/docker/: Dockerfile
xk6-milvus-bench/k8s/monitoring/: grafana-dashboard.json
xk6-milvus-bench/src/xk6_milvus_bench/: __init__.py  cli.py  config.py  datasets.py  generator.py  k6.py  reporter.py  runner.py  utils.py
xk6-milvus-bench/templates/k8s/: configmap.yaml.j2  namespace.yaml.j2  testrun.yaml.j2
xk6-milvus-bench/templates/reports/: summary.html.j2
xk6-milvus-bench/templates/scripts/: base.js.j2  benchmark.js.j2  concurrent.js.j2  insert.js.j2  mixed.js.j2  recall.js.j2  search.js.j2  soak.js.j2  struct-array.js.j2
xk6-milvus-bench/tests/: __init__.py  test_config.py  test_generator.py  test_utils.py
(+37 files in other folders)
